@@ -98,6 +98,46 @@ begin_import
 import|import
 name|javax
 operator|.
+name|naming
+operator|.
+name|Context
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|naming
+operator|.
+name|InitialContext
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|naming
+operator|.
+name|NamingException
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|naming
+operator|.
+name|NoInitialContextException
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
 name|xml
 operator|.
 name|parsers
@@ -1369,7 +1409,99 @@ parameter_list|()
 block|{
 if|if
 condition|(
-name|instanceDir
+operator|!
+name|isInstanceDirInitalized
+argument_list|()
+condition|)
+block|{
+name|String
+name|home
+init|=
+literal|null
+decl_stmt|;
+comment|// Try JNDI
+try|try
+block|{
+name|Context
+name|c
+init|=
+operator|new
+name|InitialContext
+argument_list|()
+decl_stmt|;
+name|home
+operator|=
+operator|(
+name|String
+operator|)
+name|c
+operator|.
+name|lookup
+argument_list|(
+literal|"java:comp/env/solr/home"
+argument_list|)
+expr_stmt|;
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Using JNDI solr.home: "
+operator|+
+name|home
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NoInitialContextException
+name|e
+parameter_list|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"JNDI not configured for Solr (NoInitialContextEx)"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NamingException
+name|e
+parameter_list|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"No /solr/home in JNDI"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|RuntimeException
+name|ex
+parameter_list|)
+block|{
+name|log
+operator|.
+name|warning
+argument_list|(
+literal|"Odd RuntimeException while testing for JNDI: "
+operator|+
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|// Now try system property
+if|if
+condition|(
+name|home
 operator|==
 literal|null
 condition|)
@@ -1381,7 +1513,7 @@ name|project
 operator|+
 literal|".solr.home"
 decl_stmt|;
-name|instanceDir
+name|home
 operator|=
 name|normalizeDir
 argument_list|(
@@ -1395,12 +1527,31 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
-name|instanceDir
+name|home
+operator|!=
+literal|null
+condition|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"using system property solr.home: "
+operator|+
+name|home
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|// if all else fails, try
+if|if
+condition|(
+name|home
 operator|==
 literal|null
 condition|)
 block|{
-name|instanceDir
+name|home
 operator|=
 name|project
 operator|+
@@ -1414,30 +1565,15 @@ literal|"Solr home defaulted to '"
 operator|+
 name|instanceDir
 operator|+
-literal|"' (system property "
-operator|+
-name|prop
-operator|+
-literal|" not set)"
+literal|"' (could not find system property or JNDI)"
 argument_list|)
 expr_stmt|;
 block|}
-else|else
-block|{
-name|log
-operator|.
-name|info
+name|setInstanceDir
 argument_list|(
-literal|"Solr home set to '"
-operator|+
-name|instanceDir
-operator|+
-literal|"' from system property "
-operator|+
-name|prop
+name|home
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 return|return
 name|instanceDir
