@@ -62,46 +62,6 @@ begin_import
 import|import
 name|javax
 operator|.
-name|naming
-operator|.
-name|Context
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|naming
-operator|.
-name|InitialContext
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|naming
-operator|.
-name|NamingException
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|naming
-operator|.
-name|NoInitialContextException
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
 name|servlet
 operator|.
 name|Filter
@@ -179,20 +139,6 @@ operator|.
 name|http
 operator|.
 name|HttpServletResponse
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|core
-operator|.
-name|Config
 import|;
 end_import
 
@@ -380,81 +326,6 @@ argument_list|(
 literal|"SolrDispatchFilter.init()"
 argument_list|)
 expr_stmt|;
-comment|// Only initalize the directory if it has not been done yet
-if|if
-condition|(
-operator|!
-name|Config
-operator|.
-name|isInstanceDirInitalized
-argument_list|()
-condition|)
-block|{
-try|try
-block|{
-name|Context
-name|c
-init|=
-operator|new
-name|InitialContext
-argument_list|()
-decl_stmt|;
-name|String
-name|home
-init|=
-operator|(
-name|String
-operator|)
-name|c
-operator|.
-name|lookup
-argument_list|(
-literal|"java:comp/env/solr/home"
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|home
-operator|!=
-literal|null
-condition|)
-name|Config
-operator|.
-name|setInstanceDir
-argument_list|(
-name|home
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|NoInitialContextException
-name|e
-parameter_list|)
-block|{
-name|log
-operator|.
-name|info
-argument_list|(
-literal|"JNDI not configured for Solr (NoInitialContextEx)"
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|NamingException
-name|e
-parameter_list|)
-block|{
-name|log
-operator|.
-name|info
-argument_list|(
-literal|"No /solr/home in JNDI"
-argument_list|)
-expr_stmt|;
-block|}
-block|}
 comment|// web.xml configuration
 name|this
 operator|.
